# VoC-Pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.agent/rules/: code-execution.md  code-style-guide.md  good-coding-practices.md
docker/: Dockerfile
notebooks/: exploration.ipynb
scripts/: test_steam.py
src/flows/: bertopic_training.py  steam_ingest.py  steam_process.py
src/voc/: data_models.py  main.py
src/voc/ingestion/: provider.py  state.py  steam.py
src/voc/ingestion/providers/: provider.py  steam.py
src/voc/logging/: __init__.py
src/voc/storage/: factory.py  models.py  parquet_store.py  postgres_store.py  raw_data.py  storage.py  types.py
tests/: conftest.py  test_steam.py
