[project]
name = "voc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic[vision]>=0.17.4",
    "hdbscan>=0.8.41",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "polars>=1.37.1",
    "prefect>=3.6.10",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.45",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.0",
]
